--- a/app/partials/overview.html
+++ b/app/partials/overview.html
@@ -1,22 +1,24 @@
-<div id="wrap" class="container">
+<div class="alert alert-warning" ng-if="!resume_data.name">
+    <h1>Your Name is Missing</h1>
+    <p>Add <i>name</i> to resume.json</p>
+</div>
+<div id="wrap" class="container" ng-if="resume_data.name">
     <div class="jumbotron">
         <div class="profile-photo col-md-3" ng-if="resume_data.photo">
             <img class="img-circle" src="{{resume_data.photo}}">
         </div>
-        <div class="col-md-9">
+        <div class="col-md-12">
             <h1>{{resume_data.name}}</h1>
             <h3 ng-if="resume_data.tagline">{{resume_data.tagline}}</h3>
 
-            <p class="clearfix">{{resume_data.summary}}</p>
+            <p>{{resume_data.summary}}</p>
         </div>
         <div class="clearfix col-xm-12"></div>
     </div>
 
-    <div class="row">
-        <div class="col-md-10 how bs-callout bs-callout-warning" ng-if="resume_data.how">
-            <h3 title="How">Skills</h3>
-            <a href="/#how/{{how.slug}}" class="badge" ng-repeat="how in resume_data.how">{{how.name}}</a>
-        </div>
+    <div class="col-xs-12 how" ng-if="resume_data.how">
+        <h3 title="How">Skills</h3>
+        <a href="/#how/{{how.slug}}" class="badge" ng-repeat="how in resume_data.how">{{how.name}}</a>
     </div>
 
     <div class="row">
