--- a/app/partials/where.html
+++ b/app/partials/where.html
@@ -1,3 +1,4 @@
+<a name="/where/{{where.slug}}" />
 <ol class="breadcrumb">
     <li><a href="/">Resume for {{resume_data.name}}</a></li>
     <li class="active">{{where.name}}</li>
