--- a/app/themes/basic/style.css
+++ b/app/themes/basic/style.css
@@ -81,3 +81,15 @@ footer {
         padding-right: 20px;
     }
 }
+
+.badge-1 {
+
+}
+
+.badge-2 {
+    font-size: 1.35em;
+}
+
+.badge-3 {
+    font-size: 2em;
+}
