--- a/app/partials/where.html
+++ b/app/partials/where.html
@@ -51,7 +51,7 @@
             <h3 title="How">Skills</h3>
 
             <div>
-                <a href="/#how/{{how.slug}}" class="badge" ng-repeat="how in hows">{{how.name}}</a>
+                <a href="/#how/{{how.slug}}" class="badge badge-{{how.level}}" ng-repeat="how in hows">{{how.name}}</a>
             </div>
         </div>
 
