--- a/app/partials/how.html
+++ b/app/partials/how.html
@@ -8,7 +8,7 @@
 
         <p class="dates badge" ng-if="how.start">{{how.start.display}}<span ng-if="how.end"> - </span>{{how.display}}</p>
 
-        <img src="{{how.logo}}" ng-if="how.logo">
+        <img ng-src="{{how.logo}}" ng-if="how.logo">
         <p class="about">{{how.about}}</p>
 
         <h5>My Role</h5>
