--- a/app/partials/overview.html
+++ b/app/partials/overview.html
@@ -19,7 +19,7 @@
 <div id="wrap" class="container" ng-if="resume_data.name">
     <div class="jumbotron">
         <div class="profile-photo col-md-3" ng-if="resume_data.photo">
-            <img class="img-circle" src="{{resume_data.photo}}">
+            <img class="img-circle" ng-src="{{resume_data.photo}}">
         </div>
         <div class="col-md-9">
             <h1>{{resume_data.name}}</h1>
@@ -46,7 +46,7 @@
                    ng-repeat="where in resume_data.where | orderBy:'start.date':true">
                     <div class="row">
                         <div class="col-xs-12 col-sm-4 text-center">
-                            <img src="{{where.logo}}" class="logo" ng-if="where.logo">
+                            <img ng-src="{{where.logo}}" class="logo" ng-if="where.logo">
                         </div>
                         <div class="caption clearfix col-xs-12 col-sm-8">
                             <h4 class="col-xs-12">{{where.name}}</h4>
@@ -73,7 +73,7 @@
                    ng-repeat="what in resume_data.what | orderBy:'start.date':true">
                     <div class="row">
                         <div class="col-xs-12 col-sm-4 text-center">
-                            <img src="{{what.screenshots[0]}}" class="logo" ng-if="what.screenshots[0]">
+                            <img ng-src="{{what.screenshots[0]}}" class="logo" ng-if="what.screenshots[0]">
                         </div>
                         <div class="caption clearfix col-xs-12 col-sm-8">
                             <h4 class="col-xs-12">{{what.name}}
